--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <section id="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Via saudável</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento
-                Computacional, através do ensino de Programação.</p>
+            <p class="escola-texto-um">"A agricultura familiar é um tipo de agricultura praticada em pequenas propriedades de terra nas quais mais da metade da mão de obra é formada por membros de um mesmo grupo familiar. Essa família é a responsável pela gestão do estabelecimento familiar e, além disso, parte de sua renda advém das atividades ali desenvolvidas.
+</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
                 turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
