--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <h2 class="escola-titulo">Via saudável</h2>
             <p class="escola-texto-um">"A agricultura familiar é um tipo de agricultura praticada em pequenas propriedades de terra nas quais mais da metade da mão de obra é formada por membros de um mesmo grupo familiar. Essa família é a responsável pela gestão do estabelecimento familiar e, além disso, parte de sua renda advém das atividades ali desenvolvidas.
 </p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
-                turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-dois">"A agricultura familiar representa quase 80% de todos os estabelecimentos rurais no Brasil, abastecendo o mercado interno com gêneros como arroz, feijão, café, verduras e frutas variadas. Essa atividade é desempenhada em harmonia com os recursos naturais, principalmente o solo, tornando-a importante para o avanço da sustentabilidade ambiental no campo.
+</p>
         </div>
         <img class="escola-imagem" src="cartel.png" alt="alface verde e alface roxo">
     </section>
