--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="escola-texto-dois">"A agricultura familiar representa quase 80% de todos os estabelecimentos rurais no Brasil, abastecendo o mercado interno com gêneros como arroz, feijão, café, verduras e frutas variadas. Essa atividade é desempenhada em harmonia com os recursos naturais, principalmente o solo, tornando-a importante para o avanço da sustentabilidade ambiental no campo.
 </p>
         </div>
-        <img class="escola-imagem" src="cartel.png" alt="alface verde e alface roxo">
+        <img class="escola-imagem" src="cartel.jpg" alt="alface verde e alface roxo">
     </section>
 
     <section id="estudante">
