--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
 
     <section id="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <h2 class="estudante-titulo">alguns exemplos de agricultura familiar</h2>
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
