--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="familia.png" alt="foto de uma familia"
+                <img class="estudante-imagem" src="familia.png" alt="familia"
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png"
