--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="familia.png" alt="familia"
+                    <h3 class="estudante-nome">uma familia</h3>
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png"
