--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="familia.png" alt="familia"
+                <img class="estudante-imagem" src="mao-colhento.png" alt="familia"
                     <h3 class="estudante-nome">Familia</h3>
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -56,7 +56,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
+                <img class="estudante-imagem" src="nao-" alt="foto da lizandra">
                 <h3 class="estudante-nome">Lizandra</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
