--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="mao-colhento.png" alt="familia"
+                <img class="estudante-imagem" src="familia.png" alt="familia"
                     <h3 class="estudante-nome">Familia</h3>
                 <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
