--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="nao-" alt="foto da lizandra">
-                <h3 class="estudante-nome">Lizandra</h3>
+                <img class="estudante-imagem" src="nao-sei.png" alt="trator">
+                <h3 class="estudante-nome">agricultura</h3>
                 <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
