--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="carpi.png" alt="carpir">
-                <h3 class="estudante-nome">cuidando</h3>
+                <h3 class="estudante-nome">carpindo</h3>
                 <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
