--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="mao-colhendo" alt="horta">
+                <img class="estudante-imagem" src="mao-colhendo.png" alt="horta">
                 <h3 class="estudante-nome">horta</h3>
                 <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
@@ -88,8 +88,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="outra-familia" alt="familia">
-                <h3 class="estudante-nome">aprendiazado</h3>
+                <img class="estudante-imagem" src="outra-familia.png" alt="familia">
+                <h3 class="estudante-nome">aprendizado</h3>
                 <img class="estudante-icone" src="github.png" alt="icone github">
                 <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
                         alt="icone linkedin"></a>
