--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
-                <h3 class="estudante-nome">Rafaela</h3>
+                <img class="estudante-imagem" src="outro-veio.ppg" alt="legado">
+                <h3 class="estudante-nome">legado</h3>
                 <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
